[project]
name = "bz-sentinel"
version = "0.1.4"
description = "BZ forums activity monitor and webhook trigger"
readme = "README.md"
authors = [{ name = "tainn" }]
keywords = ["app", "monitor", "bzflag"]
dependencies = [
    "discord-webhook @ git+https://github.com/tainn/discord-webhook@0.2.8",
    "loguru==0.7.0",
    "httpx==0.24.1",
    "beautifulsoup4==4.11.1"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.urls]
homepage = "https://github.com/tainn/bz-sentinel"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["src"]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["bs4", "cordhook"]
ignore_missing_imports = true
