[project]
name = "bz-sentinel"
version = "0.1.5"
readme = "readme.md"
dependencies = [
    "discord-webhook @ git+https://github.com/tainn/cordhook.git@0.2.8",
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "loguru==0.7.2"
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "mypy==1.10.0"
]

[project.urls]
homepage = "https://github.com/tainn/bz-sentinel"

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "I001",
    "F401"
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
disable_error_code = [
    "no-any-return",
    "func-returns-value"
]
exclude = ["venv"]

[[tool.mypy.overrides]]
module = ["bs4", "cordhook"]
ignore_missing_imports = true
