[project]
name = "bz-sentinel"
version = "0.1.14"
requires-python = ">=3.12"
dependencies = [
  "cordhook @ git+https://github.com/tainn/cordhook.git@0.2.9",
  "httpx==0.27.0",
  "beautifulsoup4==4.12.3",
  "loguru==0.7.2"
]

[project.optional-dependencies]
dev = ["uv", "ruff"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "ANN",
  "B",
  "A",
  "ICN",
  "PIE",
  "Q",
  "RSE",
  "RET",
  "SIM",
  "ARG",
  "PTH",
]
ignore = ["ANN101"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
